--- a/resume/resume.html
+++ b/resume/resume.html
@@ -425,7 +425,7 @@
                     </li>
                     <li>
                         <div class="circle"></div>
-                        <h4>天气预报<a href="https://github.com/guleileilei/weather-forecast" target="_blank"><i
+                        <h4>天气预报<a href="https://guleileilei.github.io/weather/weather/" target="_blank"><i
                                 class="icon-link"></i>源代码</a>
                         </h4>
                         <p>通过Ajax写的天气预报，实现天气状况查询,与后三日天气情况;实现了异步请求
